[tool.poetry]
name = "CTFishPy"
version = "0.0.1"
description = "Python project for analysis of zebrafish CT data using deep learning."
authors = ["Abdelwahab Kawafi <a.kawafi@bristol.ac.uk>"]

[tool.poetry.dependencies]
python = "3.6.9"
tqdm = "^4.43.0"
pyqt5 = "^5.14.1"
natsort = "^7.0.1"
qtpy = "^1.9.0"
opencv-contrib-python = "^4.2.0"
matplotlib = "^3.2.0"
numpy = "^1.18.1"
pandas = "^1.0.1"
pathlib2 = "^2.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
